ocaml/testsuite/tests/templates/basic/bad_param_impl.reference
File "bad_param_impl.ml", line 1:
Error: The interface for "Bad_param_impl" was compiled with -as-parameter.
       It cannot be implemented directly.
